--- a/homework1/css/style.css
+++ b/homework1/css/style.css
@@ -1,31 +1,44 @@
-.content {
-	width:1000px;
-        font-family:Arial;
+body{
+	width: 100%;
+}
+.content{
+	width: 1000px;
+    font-family: Arial;
  	background-image: url(../images/1.jpg);
  	color: black;
- 	margin:20px auto;
-	padding:30px;
+ 	margin: 20px auto;
+	padding: 30px;
 	border: 12px solid green;
 }
-
-p {
+p{
 	text-align: justify;
-	margin:20px 15px
+	margin: 20px 15px
 }
-img {
-	width:200px; 
-	height:211px;	
-	float:left;margin:3px 15px;
+img{
+	width: 200px; 
+	height: 211px;	
+	float: left;
+	margin: 3px 15px;
 	border: 2px solid #ff0000;
 }
-h1 {
+h1{
 	text-align:center;
-	font-size: 20pt;
-	font-weight: bold;
+	font-size:20pt;
+	font-weight:bold;
+}
+h2{
+	font-size:12pt;
+	font-weight:bold;
 }
 span{
 	font-weight: bold;
 }
-.text_cursive{
-	font-style: italic;
+ul{
+	margin:20px 15px
+}
+ul li{font-style: italic;
+	margin-bottom: 5px;
+} 
+ul li:first-child{
+	font-style: normal;
 }
