Fixed width in homework2

--- a/homework2/css/style.css
+++ b/homework2/css/style.css
@@ -5,11 +5,11 @@ body{
 }
 #header{
 	text-align:  center;
-	width: 17cm;
+	width: 660px;
 	margin:30px 25%;
 }
 #content{
-	width: 17cm;
+	width: 660px;
 	margin:30px 25%;
 }
 p{
