--- a/homework4/css/style.css
+++ b/homework4/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 a {
 	text-decoration: none;
+	color: #191919;
 }
 a:hover{
 	color: #06A9B7;
@@ -52,7 +53,10 @@ h4{
 	font: 18px black 'VersaSansCon';
 	margin-bottom: 13px;
 }
-.grey{
+.grey {
+	color: #888888;
+}
+.grey a{
 	color: #888888;
 }
 .black{
