--- a/homework8/css/style.css
+++ b/homework8/css/style.css
@@ -139,7 +139,7 @@ nav a:hover{
 .about-inf{
 	width: 49%;
 	left: 51%;
-	float: left;
+	overflow: hidden;
 	padding-left: 1%;
 }
 .about-inf h2{
@@ -388,7 +388,7 @@ article:hover .button2{
 }
 .contact-form{
 	width: 49%;
-	float: left;
+	overflow: hidden;
 	padding-left: 1%;
 }
 .form-name {
