--- a/homework11/11/css/style.css
+++ b/homework11/11/css/style.css
@@ -63,13 +63,23 @@ ul li {
       font-size: 2.2rem;
       line-height: 3rem;
       margin: 0 auto; }
-  #home .carousel {
+  #home .item {
     margin: 24vh 0 10vh;
     background-color: transparent; }
-  #home .carousel .item {
-    background-color: transparent; }
-
-.firm {
+   .control-slide {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin: 5px 7px;
+    border: 1px solid #ffffff;
+    text-indent:-9999px;
+    border-radius: 50%;
+    background: transparent; }
+    .slider-controls .control-slide:hover, .slider-controls .active {
+    cursor:pointer;
+    background: #ffffff;
+    transition: all .2s linear; }
+ .firm {
   padding: 40px 0 48px;
   background-color: #f0f0f0; }
   .firm li {
